# Valet

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/api/: dossier_vote_intent.py  routes.py  senate_dossier.py  server.py
app/audit/: __init__.py  rules.py  runner.py  types.py
app/core/: audit_prompts.py  audit_service.py  epistemic.py  internal_audit.py  language_constraints.py  llm_client.py  pipeline_service.py  senate_context.py  state_store.py  time_pressure.py
app/doctrine/: __init__.py  contract.py  guard.py
app/entity_resolver/: __init__.py  confidence_score.py  matcher.py  normalizer.py
app/epistemic/: __init__.py  enforcer.py
app/escrow/: __init__.py  hasher.py  ipfs_uploader.py  signing.py  timestamp_registry.py
app/incentive_graph/: __init__.py  graph.py
app/ingest/: article_extractor.py  ingest.py  models.py  video_extractor.py
app/internal_audit/: __init__.py  cluster_balance.py  coverage_analyzer.py
app/ledger/: article.py  but_if.py  editorial.py  models.py  (+5 more)
docs/: audit.md
tests/: conftest.py  test_audit.py  test_audit_service.py  test_but_if.py  test_dossier_pipeline.py  test_epistemic.py  test_execution_recording_integration.py  test_halo_bundle_contents.py  test_honest_machine.py  test_incentive_engine.py  test_ingest.py  test_integrity_ledger_integration.py  test_internal_audit.py  test_language_constraints.py  test_ledger.py  test_pipeline.py  test_pipeline_integration.py  test_receipt_signing.py  test_recording_determinism.py  test_recording_drift_guard.py  test_schema_compatibility.py  test_senate_datasource.py  test_senate_dossier.py  test_state_store.py  test_time_pressure.py  test_voice_governance.py
tools/: generate_signed_audit.py  run_pipeline.py
(+45 files in other folders)
